Fixed: Top navbar and sidebar Z-index

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ nav {
   width: 100%;
   height: 60px;
   background-color: var(--bg-color);
-  z-index: 400;
+  z-index: 9999;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -248,10 +248,10 @@ nav {
   width: 300px;
   position: fixed;
   left: 0;
-  top: 48px;
+  top: 80px !important;
   height: calc(100vh - 93px);
   background: var(--bg-color);
-  z-index: 1001;
+  z-index: 9998 !important;
   transition: all 0.3s ease;
   overflow-y: auto;
 }
@@ -1232,7 +1232,7 @@ header h1 {
 }
 
 .language-selector.active .flag-dropdown {
-  left: -20px;
+  left: 0px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 5px;
